set MYSQL_OPT_RECONNECT (see bug #41083)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@233753 c90b9560-bf6c-de11-be94-00142212c4b1